# desc-continuous-integration

./: .buildinfo  .gitignore  .gitlab-ci.yml  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/desc/build_package/: building_a_package.doctree  document.doctree  publish.doctree
.doctrees/desc/ci/: appendix.doctree  ci_at_nersc.doctree  desc_checklist.doctree  desc_working_examples.doctree  desc_working_examples_pipelines.doctree  github_actions.doctree  what_is_ci.doctree
.github/workflows/: ci_example_1.yml  ci_example_2.yml  ci_example_3.yml  ci_example_4.yml  ci_example_nersc.yml  ci_nersc.yml  ci_nersc_template.yml  documentation.yml
_sources/: index.rst.txt
_sources/desc/build_package/: building_a_package.rst.txt  document.rst.txt  publish.rst.txt
_sources/desc/ci/: appendix.rst.txt  ci_at_nersc.rst.txt  desc_checklist.rst.txt  desc_working_examples.rst.txt  desc_working_examples_pipelines.rst.txt  github_actions.rst.txt
desc/build_package/: building_a_package.html  document.html  publish.html
desc/ci/: appendix.html  ci_at_nersc.html  desc_checklist.html  desc_working_examples.html  desc_working_examples_pipelines.html  github_actions.html  what_is_ci.html
desc_ci_workflows/: ccl.yml  tables_io.yml
docs/: conf.py  index.rst
docs/desc/: appendix.rst  ci_at_nersc.rst  desc_checklist.rst  desc_working_examples.rst  github_actions.rst  what_is_ci.rst
docs/desc/build_package/: building_a_package.rst  document.rst  publish.rst
docs/desc/ci/: appendix.rst  ci_at_nersc.rst  desc_checklist.rst  desc_working_examples.rst  github_actions.rst  what_is_ci.rst
examples/NERSC_gitlab/mirror_repo_files/: .gitlab-ci.yml
examples/NERSC_gitlab/status_repo_files/: .gitlab-ci.yml
examples/desc_ci_workflows/: imsim.yml  tables_io.yml
examples/grayskull/: meta.yaml
examples/nersc_gitlab/: example-test.bash
examples/nersc_gitlab/mirror_repo_files/: mirror.bash
gitlab/: example-test.bash
gitlab/mirror_repo_files/: .gitlab-ci.yml  mirror.bash
gitlab/status_repo_files/: .gitlab-ci.yml  status-github.py
gitlab_mirror_example/: .gitlab-ci.yml  mirror.bash
python/: my_arithmetic.py  test_add.py  test_divide.py  test_multiply.py  test_pi.py  test_subtract.py
src/mydescpackage/: __init__.py  arithmetic.py  pi.py
tests/: test_add.py  test_arithmetic.py  test_pi.py
