[build-system]
requires = ["setuptools >= 61.0"] # PEP 621 compliant
build-backend = "setuptools.build_meta"

[project]
name = "mydescpackage"
description = "Example DESC Python package, some simple mathmatical functions."
license = {text = "BSD 3-Clause License"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    'numpy',
    'importlib-metadata;python_version<"3.8"'
]
requires-python = ">=3.7" # For setuptools >= 61.0 support
version = "0.0.1"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
test = ["pytest"]
ci = ["pytest", "pytest-cov", "flake8"]

[project.scripts]
display-pi = "mydescpackage.pi:display_pi"
