[build-system]
requires = ["setuptools >= 61.0"] # PEP 621 compliant
build-backend = "setuptools.build_meta"

[project]
name = "mydescpackage"
version = "0.0.1"
description = "Example DESC Python package, some simple mathmatical functions."
readme = "README.md"
authors = [{ name = "Stuart McAlpine", email = "stuart.mcalpine@fysik.su.se" }]
license = { file = "LICENCE" }
classifiers = [
    "Programming Language :: Python :: 3",
]
keywords = ["desc", "python"]
dependencies = [
    'numpy',
    'importlib-metadata;python_version<"3.8"'
]
requires-python = ">=3.7" # For setuptools >= 61.0 support

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
ci = ["pytest", "pytest-cov", "flake8"]

[project.scripts]
display-pi = "mydescpackage.pi:display_pi"
