[build-system]
requires = ["setuptools >= 61.0"] # PEP 621 compliant
build-backend = "setuptools.build_meta"

[project]
name = "mydescpackage"
description = "Example DESC Python package, some simple mathmatical functions."
readme = "README.md"
authors = [{ name = "Stuart McAlpine", email = "stuart.mcalpine@fysik.su.se" }]
license = { file = "LICENCE" }
classifiers = [
    "Programming Language :: Python :: 3",
]
keywords = ["desc", "python"]
dependencies = [
    'numpy',
]
requires-python = ">=3.8"
dynamic = ["version"] # Scrape the version dynamically from the package

[tool.setuptools.dynamic]
version = {attr = "mydescpackage._version.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
ci = ["pytest", "pytest-cov", "flake8"]

[project.scripts]
display-pi = "mydescpackage.pi:display_pi"
